--- a/aries.htm
+++ b/aries.htm
@@ -6,7 +6,7 @@
         <script type="text/javascript" src="aries.js"></script>
     </head>
     <body>
-        <script>window.myValues = {{.MyVals}};</script>
+        <script>window.imageList = {{.ImageList}};</script>
         <!-- this element contains the panels -->
         <div id="fader" onclick='changeImage()'>
             <!-- this is the first panel -->
