--- a/aries.htm
+++ b/aries.htm
@@ -6,6 +6,7 @@
         <script>window.imageList = {{.Images}};</script>
         <script type="text/javascript" src="aries.js"></script>
         <script>window.imageRefresh = {{.ImageRefresh}};</script>
+        <script>window.TypeOfImage = {{.TypeOfImage}};</script>
         <script>window.TypePage = {{.TypePage}};</script>
         <script>window.FadeDuration = 3;</script>
     </head>
